After testing on smartphones, it became apparent that several adjustments were necessary, which were not visible in dev tools. // The height of the buttonsContainer class has been corrected.

--- a/src/layout/startApp/ButtonsContainer.module.scss
+++ b/src/layout/startApp/ButtonsContainer.module.scss
@@ -9,6 +9,7 @@
 	width: 100%;
 	height: 360px;
 	margin-top: 20px;
+	margin-top: 0;
 	padding-top: 35px;
 	cursor: none;
 }
