--- a/src/layout/startApp/TurnOnTitleLetters.module.scss
+++ b/src/layout/startApp/TurnOnTitleLetters.module.scss
@@ -6,6 +6,7 @@
 	position: relative;
 	align-items: center;
 	height: 250px;
+	height: 200px;
 }
 
 .titleLettersBox {
